--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
 	<groupId>ru.apache_maven</groupId>
 	<artifactId>test_mvn_project1</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>jar</packaging>
 
 	<name>test_mvn_project1</name>
@@ -28,7 +27,7 @@
 	<scm>
 		<connection>scm:git:ssh://github.com/smilart-sebyakina-n-a/test_mvn_project1.git</connection>
 		<developerConnection>scm:git:ssh@github.com:smilart-sebyakina-n-a/test_mvn_project1.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>test_mvn_project1-0.0.1</tag>
 		<url>http://github.com/smilart-sebyakina-n-a/test_mvn_project1</url>
 	</scm>
 
