--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 	<scm>
 		<connection>scm:git:git://github.com/smilart-sebyakina-n-a/test_mvn_project1.git</connection>
 		<developerConnection>scm:git:git@github.com:smilart-sebyakina-n-a/test_mvn_project1.git</developerConnection>
-		<tag>test_mvn_project1-0.0.1</tag>
+		<tag>test_mvn_project1</tag>
 		<url>http://github.com/smilart-sebyakina-n-a/test_mvn_project1</url>
 	</scm>
 
